# SITCON-Camp-2024-Telegram-Bot-Development

./: .gitignore  README.md  accounting_bot.py  accounting_data.json  command.py  day_time_bot.py  daytime.py  decide_food.py  echo_bot.py  food_list.json  honest_bear.py  initial.py  inline_keyboard.py  jyanken_bot.py  jyanken_bot_popup.py  poll_bot.py  pyproject.toml  send_methods.py  trivial.py
