[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["aa35037123 <wesleyshi0321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.17.0"
telebot = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
